@@ -188,7 +188,7 @@ public class WordItemsMem extends ItemsMem {
             din.readFully(aword);
             String word = new String(aword);
 
-            hash.put(word, new Integer(i));
+            hash.put(word, Integer.valueOf(i));
             array[i] = word;
         }
 
